# futureproof-data

./: .dockerignore  .gitignore  CLAUDE.md  DESIGN.md  LICENSE_SOURCES.md  Makefile  README-DEPRECATED.md  README-GEMINI.md  README.md  conftest.py  pyproject.toml
.claude/: settings.json
backend/: Dockerfile  cli.py  pyproject.toml  railway.json  ruff.toml
backend/app/: main.py  state.py
backend/app/config/: branch_campuses.py
backend/app/models/: api.py  career.py  career_pick.py  health.py
backend/app/routers/: ask_gemma_router.py  branches.py  builds.py  builds_collection.py  career_pick.py  careers.py  gauntlet.py  guidance_router.py  health.py  intent.py  pdf_export.py  profile.py  reports.py  schools.py  sessions.py  set_your_course.py  skills.py  wrapped.py
backend/app/services/: __init__.py  _coercion.py  _sse.py  ask_gemma.py  boss_fights.py  branch_tree.py  builds.py  career_description.py  career_pick_qna.py  career_tiering.py  career_tree.py  community_suggestions.py  correction_log.py  db.py  gemma_client.py  grad_credentials.py  guidance.py  intent.py  loan_math.py  locale.py  major_lookup.py  mcp_client.py  next_steps.py  pdf_copy.py  pdf_export.py  pdf_questions.py  prefetch.py  profile.py  prose_sanitize.py  receipts.py  report_gen.py  school_lookup.py  schools_for_career.py  sessions.py  set_your_course.py  skill_pool.py  skill_recs.py  soc_expansion.py  stat_engine.py  wrapped_renderer.py
backend/governance/pipeline-state/: onet-experience-requirements.md-pipeline.json
backend/templates/wrapped/: _base.css  frame-bosses.html  frame-cta.html  frame-identity.html  frame-insight.html  frame-pentagon.html  frame-risk.html
backend/tests/: conftest.py  test_app.py  test_branch_campuses_config.py  test_health.py
backend/tests/fixtures/: intent_responses.json
backend/tests/routers/: conftest.py  test_ask_gemma_router.py  test_branches_router.py  test_builds.py  test_builds_collection.py  test_career_pick_router.py  test_careers_router.py  test_health.py  test_pdf_export.py  test_set_your_course_router.py  test_wrapped_router.py
backend/tests/services/: conftest.py  test_ask_gemma.py  test_ask_gemma_explain_integration.py  test_ask_gemma_explain_receipt.py  test_ask_gemma_stream.py  test_ask_gemma_voice.py  test_boss_fights.py  test_branch_tree.py  test_builds.py  test_builds_wrapped.py  test_career_description.py  test_career_pick_qna.py  test_career_tiering.py  test_career_tree.py  test_community_suggestions.py  test_correction_log.py  test_gemma_client.py  test_gemma_voice_contract.py  test_grad_credentials.py  test_guidance.py  test_intent.py  test_loan_math.py  test_locale.py  test_major_lookup.py  test_next_steps.py  test_pdf_copy.py  test_pdf_export.py  test_pdf_questions.py  test_prefetch.py  test_prose_sanitize.py  test_receipts.py  test_receipts_scoring_model.py  test_report_gen.py  test_school_lookup.py  test_schools_for_career_service.py  test_set_your_course.py  test_set_your_course_chip_tool_loop.py  test_skill_pool.py  test_skill_recs.py  test_soc_expansion.py  (+3 more)
docs/: Background_for_CIP_Disambig_Fix.md  COMPETITION_TERMS.md  design-system-proposal.md  env-template.txt  futureproof-spike-vs-prd-analysis.md  futureproof_hackathon_prd_v8.md  gemma4-feature-usage-scorecard.md  gemma4-features-hackathon-report.md  gemma4_model_options.md  hackathon_rules.txt  language-support-decision-report.md  rules2.txt  stress-test-playbook.md
domain/: manifest.yaml  raw-ingest-college-scorecard-institution-context.md
eval/: README.md  __init__.py  pyproject.toml  runner.py
eval/adapters/: __init__.py  base.py  career_intent.py  generic_gemma.py  registry.py
eval/golden/career_intent/: cases.jsonl
eval/golden/explain_aura/: cases.jsonl
eval/golden/explain_ern/: cases.jsonl
eval/golden/explain_grw/: cases.jsonl
eval/golden/explain_res/: cases.jsonl
eval/golden/explain_roi/: cases.jsonl
eval/golden/skill_pool/: cases.jsonl
eval/instrumentation/: __init__.py  call_site_map.py
eval/results/2026-05-13-005612/: summary.json  summary.md
eval/results/2026-05-13-005847/: summary.json  summary.md
eval/results/2026-05-13-010145/: summary.json  summary.md
eval/results/2026-05-13-010406/: summary.json  summary.md
eval/results/2026-05-13-183007/: summary.json  summary.md
eval/results/2026-05-13-183940/: summary.json  summary.md
eval/results/2026-05-13-214236/: summary.json  summary.md
eval/results/2026-05-13-215958/: summary.json  summary.md
eval/results/2026-05-17-142826/: summary.json  summary.md
eval/results/factcheck-2026-05-13-claude-direct/: factcheck_judgments.json
eval/scorers/: __init__.py  base.py  content_check.py  exact_match.py  latency.py  rubric.py  schema.py  skill_factcheck.py  skill_pool.py  tolerant_match.py  tool_call.py
eval/tests/: conftest.py  test_call_site_map.py  test_scorers.py
frontend/: Dockerfile  index.html  nginx.conf.template  package-lock.json  package.json  railway.json  tailwind.config.ts  test_e2e.mjs  tsconfig.node.json  vitest.config.ts
governance/: business-glossary.json  data-dictionary.json  domain-context.md
mockups/: party-select.html  rival-paths.html
reports/: bugfix-broad-cip-substitution-and-intent-2026-04-18.md  bugfix-disable-intent-yaml-regression-2026-04-19.md  bugfix-disable-intent-yaml-regression-v2-2026-04-19.md  cip-routing-ask-gemma-diagnosis-2026-04-19.md  design-vision-2026-04-17.md  elmhurst-university_urban-studies-affairs_20260412-175529.md  eval-baseline-2026-05-13.md  eval-baseline-v2-2026-05-13.md  eval-v3-2026-05-13.md  feature-ask-gemma-2026-04-28.md  feature-branch-campus-suppression-2026-05-05.md  feature-career-description-on-pdf-2026-05-08.md  feature-chapter-book-2026-04-20.md  feature-chip-dispatch-mcp-tool-calling-2026-04-20.md  feature-compare-schools-for-career-2026-04-29.md  feature-compare-screen-redesign-2026-05-03.md  feature-explain-stat-receipt-2026-05-02.md  feature-explain-stat-receipt-aura-2026-05-03.md  feature-explain-stat-receipt-roi-res-grw-2026-05-02.md  feature-future-tree-enhancements-2026-05-01.md  (+68 more)
scripts/: demo_query.py  (+103 more)
(+2775 files in other folders)
