[project]
name = "futureproof-data"
version = "0.1.0"
description = "FutureProof data pipeline — maps school + major to career outcomes and AI exposure analysis using Brightsmith"
requires-python = ">=3.11"
dependencies = [
    "brightsmith @ git+https://github.com/hyena-studios/brightsmith.git",
    "openpyxl>=3.1",
    "openai>=1.40",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "pyyaml>=6.0",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Both the pipeline (src/) and the backend (backend/) live in this
# monorepo. Pipeline mcp tests under tests/mcp/ import from backend's
# ``app.config`` (for branch-campus suppression), so put both on the
# pythonpath when running pytest from the repo root.
pythonpath = ["src", "backend"]
markers = [
    "network: tests that require network access",
]
addopts = "-m 'not network'"
