[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "futureproof-backend"
version = "0.1.0"
description = "FutureProof — AI Career Impact Tool Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "duckdb>=1.1.0",
    # Wrapped frame rendering (screen 9). Requires one-time
    # `playwright install chromium` after `pip install` — documented
    # in README. Hard dep per spec §2 (no graceful degradation).
    # Pinned to a narrow range: the Python package and the Microsoft
    # base image (backend/Dockerfile) ship paired Chromium binaries
    # and drift produces a "Executable doesn't exist" runtime crash.
    # Bump both together.
    "playwright>=1.58.0,<1.59.0",
    "jinja2>=3.1.0",
    # Gemma/API dependencies. The old Rich CLI proof of concept was
    # archived under archive/spikes/cli and is not a backend entry point.
    "openai>=1.40",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "brightsmith @ git+https://github.com/jcernauske/brightsmith.git",
    # PDF Report Exports (feature-pdf-report-exports). Pure-Python PDF
    # rendering via Platypus; bundled font files live at
    # backend/app/services/pdf_fonts/ and are registered lazily.
    "reportlab>=4.2.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# reportlab has no type stubs and none are available on PyPI.
# All reportlab imports in pdf_export.py are covered by type: ignore[attr-defined]
# at call sites; silence the top-level import-untyped diagnostics here.
module = "reportlab.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
